--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 										</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Explore More</a></li>
+											<li><a href="https://github.com/vatsal-patel-vkp/vatsaldatalab.github.io/blob/main/Vatsalkumar%20Patel%20Job%20Resume%20.pdf" target="_blank" class="button">View My Resume</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/business-analysis.png" alt="" /></span>
