--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.png" alt="" /></span>
+						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Welcome to <br/> Vatsal's DataLab</h1>
 						<p>Transforming Data into Knowledge, Knowledge into Power<br/></p>
 					</header>
@@ -48,7 +48,7 @@
 											informed decisions. Let's embark on a data adventure together, exploring the endless possibilities data has to offer!
 										</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Explore More</a></li>
+											<li><a href="introduction.html" class="button">Explore More</a></li>
 											<li><a href="https://github.com/vatsal-patel-vkp/vatsaldatalab.github.io/blob/main/Vatsalkumar%20Patel%20Job%20Resume%20.pdf" target="_blank" class="button">View My Resume</a></li>
 										</ul>
 									</div>
@@ -80,7 +80,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Explore More</a></li>
+										<li><a href="experience.html" class="button">Explore More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -105,7 +105,7 @@
 									<li>
 										<span class="logo"><img src="images/tableau-software.svg"></img></span>
 										<h3><a href="#"> Airbnb Analysis <br/> Tableau Project</a></h3>
-										<p>As an IT Trainee at Eastern Techno Solutions, I immersed myself in creating dynamic full-stack websites and applications. Through hands-on experience, I mastered front-end development with HTML, CSS, and JavaScript, and back-end development using technologies. This enriching opportunity fueled my passion for building innovative and user-centric digital solutions.</p>
+										<p>Exploring the world of hospitality through data, my Airbnb Analysis project on Tableau unveils fascinating insights. From price trends to customer preferences, I've visualized it all. Dive into this journey of discovery, where data paints a vivid picture of the evolving hospitality landscape.</p>
 									</li>
 								</ul>
 								</footer>
